--- a/index.html
+++ b/index.html
@@ -4,11 +4,15 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="West Bengal Board subject guide for students from Pre-Primary to Class 12, organized by class and subject for easy navigation and study." />
+  <meta name="keywords" content="West Bengal Board, WBBSE, WBCHSE, Pre Primary, Class 10, Class 12, Bengali medium, study help, Subha4u" />
+  <meta name="author" content="Subha4u" />
+  <meta name="robots" content="index, follow" />
+  <meta name="theme-color" content="#1e293b" />
   <title>Subha4u | WB Board Study Help</title>
   <style>
     body {
       font-family: Arial, sans-serif;
-      background: #f3f4f6;
+      background: #f9fafb;
       margin: 0;
       padding: 0;
       color: #111;
@@ -16,33 +20,40 @@
     header {
       background: #1e293b;
       color: white;
-      padding: 20px;
+      padding: 24px;
       text-align: center;
     }
     .container {
       padding: 40px 20px;
-      max-width: 800px;
+      max-width: 900px;
       margin: auto;
     }
     .grid {
       display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
-      gap: 16px;
+      grid-template-columns: repeat(auto-fill, minmax(140px, 1fr));
+      gap: 20px;
     }
     .card {
-      background: white;
+      background: #fff;
       padding: 20px;
-      border-radius: 12px;
+      border-radius: 14px;
       text-align: center;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      box-shadow: 0 2px 10px rgba(0,0,0,0.08);
       cursor: pointer;
       transition: 0.2s ease;
       text-decoration: none;
       color: #111;
-      font-weight: bold;
+      font-weight: 600;
+      border: 1px solid #e5e7eb;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      height: 100px;
     }
     .card:hover {
-      background: #dbeafe;
+      background: #eff6ff;
+      transform: scale(1.03);
+      border-color: #93c5fd;
     }
     .hidden {
       display: none;
@@ -51,21 +62,22 @@
       margin-top: 20px;
       display: inline-block;
       color: #1e40af;
+      font-weight: 500;
       cursor: pointer;
     }
     @media (max-width: 600px) {
       .container {
-        padding: 20px 10px;
+        padding: 20px 12px;
       }
       .card {
         padding: 16px;
         font-size: 14px;
+        height: 80px;
       }
     }
   </style>
 </head>
 <body>
-
   <header>
     <h1>Subha4u 🎓</h1>
     <p>Helping West Bengal Board students from Pre-Primary to Class 12</p>
@@ -74,7 +86,6 @@
   <div class="container">
     <h2 id="main-title">Select Your Class</h2>
     <div class="grid" id="class-grid"></div>
-
     <div class="grid hidden" id="subject-grid"></div>
     <div class="back-button hidden" id="back-button">← Back to Classes</div>
   </div>
@@ -128,7 +139,7 @@
         const link = document.createElement('a');
         link.className = 'card';
         link.href = page;
-        link.innerText = subj;
+        link.textContent = subj;
         link.role = 'link';
         link.setAttribute('aria-label', `Open ${subj}`);
         link.addEventListener('click', e => {
@@ -151,6 +162,5 @@
       title.innerText = 'Select Your Class';
     });
   </script>
-
 </body>
 </html>
